[package]
name = "cxxrtl-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
cxxrtl = {path = "../cxxrtl"}
libloading = "0.8"
tokio = { version = "1.31.0", features = ["rt", "sync", "macros"] }
futures = "0.3.28"
rand = "0.8.5"
